[package]
name = "dummy-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["dylib"]

[build-dependencies.syslog-ng-build]
path = "../syslog-ng-rs/syslog-ng-build"

[dependencies.syslog-ng-common]
path = "../syslog-ng-rs/syslog-ng-common"

[dependencies.syslog-ng-sys]
path = "../syslog-ng-rs/syslog-ng-sys"

[dependencies]
log = "0.3"
