[package]
name = "dummy-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["dylib"]

[build-dependencies.syslog-ng-build]
git = "https://github.com/ihrwein/syslog-ng-rs.git"

[dependencies.syslog-ng-common]
git = "https://github.com/ihrwein/syslog-ng-rs.git"

[dependencies]
log = "0.3"
